# sub

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
sub/: __main__.py
sub/analyzer/: __main__.py  analyze.py
sub/parser/: parse.py
sub/parser/datatypes/: __init__.py  cost.py  date.py  frequency.py
sub/runner/: run.py
sub/runner/domain/: __init__.py  payment.py  subscription.py  subscription_list.py
