[tool.poetry]
name = "sub"
version = "0.1.0"
description = "Keep track of your recurring subscriptions"
authors = ["Stelios Karabasakis <skarabasakis@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
